<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="25%p"
    android:keyHeight="10%p" >
<!-- 
	@keylayout:
	4 rows, 4 keys per row
	
	123<=
	456Done
	789e
	.0-s
	
	NOTE you may need additional resource files and strings to use this
 -->
    <Row>
        <Key android:codes="49"    android:keyLabel="1" android:keyEdgeFlags="left" />
        <Key android:codes="50"    android:keyLabel="2" />
        <Key android:codes="51"    android:keyLabel="3" />
        <Key android:codes="-5"    android:keyIcon="@drawable/sym_keyboard_delete_holo_dark" android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>
    <Row>
        <Key android:codes="52"    android:keyLabel="4" android:keyEdgeFlags="left" />
        <Key android:codes="53"    android:keyLabel="5" />
        <Key android:codes="54"    android:keyLabel="6" />
        <Key android:codes="-4"    android:keyLabel="@string/done" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:codes="55"    android:keyLabel="7" android:keyEdgeFlags="left" />
        <Key android:codes="56"    android:keyLabel="8" />
        <Key android:codes="57"    android:keyLabel="9" />
        <Key android:codes="101"    android:keyLabel="exp" android:keyEdgeFlags="right"/>
    </Row>
    
    <Row>
        <Key android:codes="46"	   android:keyLabel="@string/decimal_point" android:keyEdgeFlags="left" />
        <Key android:codes="48"    android:keyLabel="0"  />
        <Key android:keyLabel="-" />
        <Key android:codes="55000" android:keyLabel="@string/select_all" android:keyEdgeFlags="right"/>
    </Row>
</Keyboard>