<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutConverter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >
    
    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layoutEntryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editFromValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/convert_from_hint"
            android:inputType="text"
            android:padding="3dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textFromType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text="@string/covert_from_unit_hint"
            android:textColor="#B2B200"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInstructionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEntryContainer"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:paddingBottom="5dip" >

        <TextView
            android:id="@+id/textEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/conversion_instructions"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView 
	    android:id="@+id/listViewTypes"
	    android:layout_below="@id/layoutInstructionsContainer"
        android:layout_above="@id/keyboardview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:padding="6dip"
	    android:verticalSpacing="6dip"
	    android:background="#000000" />
        
</RelativeLayout>
